# OptimusV2

./: .dockerignore  .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  SETUP_COMPLETE.md  benchmark.py  benchmark_setup.bat  demo_job.json  deploy.ps1  deploy.sh  load_test.py  monitor_scaling.ps1  optimus-workers.sh  setup.ps1  setup.sh  spam_java_requests.py  start-worker.sh  test_job.json  test_job_fail.json  test_job_java.json  test_job_rust.json  test_languages.sh  test_simple_java.json
bins/optimus-api/: Cargo.toml  Dockerfile
bins/optimus-api/src/: handlers.rs  language_config.rs  main.rs  metrics.rs  routes.rs
bins/optimus-cli/: Cargo.toml
bins/optimus-cli/src/: commands.rs  generator.rs  (+1 more)
bins/optimus-worker/: Cargo.toml  Dockerfile
bins/optimus-worker/src/: config.rs  docker.rs  engine.rs  engine_tests.rs  evaluator.rs  executor.rs  main.rs  runner.rs
config/: languages.json  optimus.toml
config/templates/: scaled-object-retry.yaml.tmpl  scaled-object.yaml.tmpl
dockerfiles/: Dockerfile.base  runner.sh
dockerfiles/java/: Dockerfile  Runner.java
dockerfiles/python/: Dockerfile  runner.py
dockerfiles/rust/: Dockerfile  runner.sh
k8s/: api-deployment.yaml  namespace.yaml  redis.yaml  worker-deployment-java.yaml  worker-deployment-python.yaml  worker-deployment-rust.yaml  worker-deployment.yaml
k8s/keda/: README.md  keda-install.yaml  scaled-object-java-retry.yaml  scaled-object-java.yaml  scaled-object-python-retry.yaml  scaled-object-python.yaml  scaled-object-rust-retry.yaml  scaled-object-rust.yaml
libs/optimus-common/: Cargo.toml
(+4 files in other folders)
